--- a/src/policies/PPO/env_7_pomdp_radius2/indipendent_strictplay_4agents_dense.ipynb
+++ b/src/policies/PPO/env_7_pomdp_radius2/indipendent_strictplay_4agents_dense.ipynb
@@ -423,48 +423,31 @@
     "            text = component_name.upper() if component_name else \"ERROR\"\n",
     "            bg_color = (100, 100, 255) if \"AGENT\" in text else (128,128,128) # Blue agent, Gray fixed components\n",
     "            return self._create_missing_sprite(text, bg_color)\n",
-    "\n",
+    "    \n",
     "    def _create_vision_overlay(self, agent_pos, agent_idx):\n",
-    "        \"\"\"Create a semi-transparent surface showing agent's vision radius.\"\"\"\n",
     "        overlay = pygame.Surface((self.window_size, self.window_size), pygame.SRCALPHA)\n",
     "\n",
-    "        # Get agent color with transparency\n",
     "        color = self.agent_colors[agent_idx % len(self.agent_colors)]\n",
-    "\n",
-    "        # Draw vision cells with gradient effect\n",
-    "        center_x, center_y = agent_pos[0], agent_pos[1]\n",
-    "\n",
-    "        for x in range(self.grid_size):\n",
-    "            for y in range(self.grid_size):\n",
-    "                # Calculate Manhattan distance\n",
-    "                dist = abs(x - center_x) + abs(y - center_y)\n",
-    "\n",
-    "                if dist <= self.vision_radius:\n",
-    "                    # Gradient alpha: stronger at center, weaker at edges\n",
-    "                    alpha = int(60 * (1 - dist / (self.vision_radius + 1)))\n",
-    "                    cell_color = (*color, alpha)\n",
-    "\n",
-    "                    rect = pygame.Rect(\n",
-    "                        x * self.cell_size,\n",
-    "                        y * self.cell_size,\n",
-    "                        self.cell_size,\n",
-    "                        self.cell_size\n",
-    "                    )\n",
-    "                    pygame.draw.rect(overlay, cell_color, rect)\n",
-    "\n",
-    "        # Draw vision boundary circle (approximate)\n",
+    "        alpha_fill = 30  \n",
+    "        alpha_border = 100 \n",
+    "        \n",
     "        center_pixel = (\n",
-    "            int((center_x + 0.5) * self.cell_size),\n",
-    "            int((center_y + 0.5) * self.cell_size)\n",
-    "        )\n",
+    "            int((agent_pos[0] + 0.5) * self.cell_size),\n",
+    "            int((agent_pos[1] + 0.5) * self.cell_size)\n",
+    "        )       \n",
     "        radius_pixel = int((self.vision_radius + 0.5) * self.cell_size)\n",
     "\n",
-    "        # Draw outer circle boundary\n",
     "        pygame.draw.circle(\n",
-    "            overlay,\n",
-    "            (*color, 100),\n",
-    "            center_pixel,\n",
-    "            radius_pixel,\n",
+    "            overlay, \n",
+    "            (*color, alpha_fill), \n",
+    "            center_pixel, \n",
+    "            radius_pixel\n",
+    "        )\n",
+    "        pygame.draw.circle(\n",
+    "            overlay, \n",
+    "            (*color, alpha_border), \n",
+    "            center_pixel, \n",
+    "            radius_pixel, \n",
     "            width=2\n",
     "        )\n",
     "\n",
@@ -547,8 +530,7 @@
     "    def close(self):\n",
     "        if self.window is not None:\n",
     "            pygame.display.quit()\n",
-    "            pygame.quit()\n",
-    "\n"
+    "            pygame.quit()\n"
    ]
   },
   {
@@ -804,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "59369442",
    "metadata": {},
    "outputs": [
@@ -826,15 +808,14 @@
       "  self._loggers.append(cls(self.config, self.logdir, self.trial))\n",
       "/home/terra/anaconda3/envs/MARL/lib/python3.10/site-packages/google/api_core/_python_version_support.py:266: FutureWarning: You are using a Python version (3.10.19) which Google will stop supporting in new releases of google.api_core once it reaches its end of life (2026-10-04). Please upgrade to the latest Python version, or at least Python 3.11, to continue receiving updates for google.api_core past that date.\n",
       "  warnings.warn(message, FutureWarning)\n",
-      "2026-01-08 10:38:26,817\tINFO worker.py:2007 -- Started a local Ray instance.\n",
+      "2026-01-17 12:56:40,796\tINFO worker.py:2007 -- Started a local Ray instance.\n",
       "/home/terra/anaconda3/envs/MARL/lib/python3.10/site-packages/ray/_private/worker.py:2046: FutureWarning: Tip: In future versions of Ray, Ray will no longer override accelerator visible devices env var if num_gpus=0 or num_gpus=None (default). To enable this behavior and turn off this error message, set RAY_ACCEL_ENV_VAR_OVERRIDE_ON_ZERO=0\n",
       "  warnings.warn(\n",
-      "2026-01-08 10:38:29,177\tWARNING recurrent_net.py:85 -- DeprecationWarning: `ray.rllib.models.torch.recurrent_net.RecurrentNetwork` has been deprecated. This will raise an error in the future!\n",
-      "[2026-01-08 10:38:29,303 E 7815 7815] core_worker.cc:2223: Actor with class name: 'RolloutWorker' and ID: '5d2a91632ed4067903ae9c3801000000' has constructor arguments in the object store and max_restarts > 0. If the arguments in the object store go out of scope or are lost, the actor restart will fail. See https://github.com/ray-project/ray/issues/53727 for more details.\n",
-      "\u001b[36m(RolloutWorker pid=8055)\u001b[0m /home/terra/anaconda3/envs/MARL/lib/python3.10/site-packages/pygame/pkgdata.py:25: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "\u001b[36m(RolloutWorker pid=8055)\u001b[0m   from pkg_resources import resource_stream, resource_exists\n",
-      "2026-01-08 10:38:33,067\tWARNING util.py:61 -- Install gputil for GPU system monitoring.\n",
-      "\u001b[36m(RolloutWorker pid=8055)\u001b[0m DeprecationWarning: `ray.rllib.models.torch.recurrent_net.RecurrentNetwork` has been deprecated. This will raise an error in the future!\n"
+      "2026-01-17 12:56:42,689\tWARNING recurrent_net.py:85 -- DeprecationWarning: `ray.rllib.models.torch.recurrent_net.RecurrentNetwork` has been deprecated. This will raise an error in the future!\n",
+      "[2026-01-17 12:56:42,771 E 149708 149708] core_worker.cc:2223: Actor with class name: 'RolloutWorker' and ID: '05ec28cbb06f7d1972819fc301000000' has constructor arguments in the object store and max_restarts > 0. If the arguments in the object store go out of scope or are lost, the actor restart will fail. See https://github.com/ray-project/ray/issues/53727 for more details.\n",
+      "\u001b[36m(RolloutWorker pid=149972)\u001b[0m /home/terra/anaconda3/envs/MARL/lib/python3.10/site-packages/pygame/pkgdata.py:25: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "\u001b[36m(RolloutWorker pid=149972)\u001b[0m   from pkg_resources import resource_stream, resource_exists\n",
+      "2026-01-17 12:56:45,867\tWARNING util.py:61 -- Install gputil for GPU system monitoring.\n"
      ]
     }
    ],
@@ -863,10 +844,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "28da8e2d",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m(RolloutWorker pid=149972)\u001b[0m DeprecationWarning: `ray.rllib.models.torch.recurrent_net.RecurrentNetwork` has been deprecated. This will raise an error in the future!\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -883,10 +871,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[36m(pid=gcs_server)\u001b[0m [2026-01-08 10:38:55,640 E 7875 7875] (gcs_server) gcs_server.cc:303: Failed to establish connection to the event+metrics exporter agent. Events and metrics will not be exported. Exporter agent status: RpcError: Running out of retries to initialize the metrics agent. rpc_code: 14\n",
-      "\u001b[33m(raylet)\u001b[0m [2026-01-08 10:38:56,781 E 7990 7990] (raylet) main.cc:1032: Failed to establish connection to the metrics exporter agent. Metrics will not be exported. Exporter agent status: RpcError: Running out of retries to initialize the metrics agent. rpc_code: 14\n",
-      "\u001b[36m(RolloutWorker pid=8055)\u001b[0m [2026-01-08 10:38:57,538 E 8055 8205] core_worker_process.cc:842: Failed to establish connection to the metrics exporter agent. Metrics will not be exported. Exporter agent status: RpcError: Running out of retries to initialize the metrics agent. rpc_code: 14\n",
-      "[2026-01-08 10:38:57,760 E 7815 8043] core_worker_process.cc:842: Failed to establish connection to the metrics exporter agent. Metrics will not be exported. Exporter agent status: RpcError: Running out of retries to initialize the metrics agent. rpc_code: 14\n"
+      "\u001b[36m(pid=gcs_server)\u001b[0m [2026-01-17 12:57:09,916 E 149802 149802] (gcs_server) gcs_server.cc:303: Failed to establish connection to the event+metrics exporter agent. Events and metrics will not be exported. Exporter agent status: RpcError: Running out of retries to initialize the metrics agent. rpc_code: 14\n",
+      "\u001b[33m(raylet)\u001b[0m [2026-01-17 12:57:10,723 E 149917 149917] (raylet) main.cc:1032: Failed to establish connection to the metrics exporter agent. Metrics will not be exported. Exporter agent status: RpcError: Running out of retries to initialize the metrics agent. rpc_code: 14\n",
+      "\u001b[36m(RolloutWorker pid=149972)\u001b[0m [2026-01-17 12:57:11,465 E 149972 150107] core_worker_process.cc:842: Failed to establish connection to the metrics exporter agent. Metrics will not be exported. Exporter agent status: RpcError: Running out of retries to initialize the metrics agent. rpc_code: 14\n",
+      "[2026-01-17 12:57:11,709 E 149708 149970] core_worker_process.cc:842: Failed to establish connection to the metrics exporter agent. Metrics will not be exported. Exporter agent status: RpcError: Running out of retries to initialize the metrics agent. rpc_code: 14\n"
      ]
     },
     {
@@ -922,6 +910,13 @@
     "# Track previous action/reward for each agent separately\n",
     "prev_actions = {agent_id: 0 for agent_id in env.possible_agents}\n",
     "prev_rewards = {agent_id: 0.0 for agent_id in env.possible_agents}\n",
+    "\n",
+    "# Set temperature for temperature sampling (when exploration+TurePPo explots temperature sampling with temperature = 1)\n",
+    "new_temperature = 0.5\n",
+    "def set_temperature(policy, temperature):\n",
+    "    policy.exploration.temperature = temperature\n",
+    "shared_policy = ppo.get_policy(\"shared_policy\")\n",
+    "set_temperature(shared_policy, new_temperature)\n",
     "\n",
     "num_episodes = 0\n",
     "successes = 0\n",
@@ -984,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b231cc5",
+   "id": "b467ebc9",
    "metadata": {},
    "outputs": [],
    "source": []
